@@ -89,11 +89,14 @@ SSL_METHOD *SSLv23_client_method(void)
 		{
 		CRYPTO_w_lock(CRYPTO_LOCK_SSL_METHOD);
 
-		memcpy((char *)&SSLv23_client_data,
-			(char *)sslv23_base_method(),sizeof(SSL_METHOD));
-		SSLv23_client_data.ssl_connect=ssl23_connect;
-		SSLv23_client_data.get_ssl_method=ssl23_get_client_method;
-		init=0;
+		if (init)
+			{
+			memcpy((char *)&SSLv23_client_data,
+				(char *)sslv23_base_method(),sizeof(SSL_METHOD));
+			SSLv23_client_data.ssl_connect=ssl23_connect;
+			SSLv23_client_data.get_ssl_method=ssl23_get_client_method;
+			init=0;
+			}
 
 		CRYPTO_w_unlock(CRYPTO_LOCK_SSL_METHOD);
 		}
